# agent-workbench-next

./: .gitignore  CHANGELOG.md  README.md  awbench-next.sh  awbench_server.py  install.sh
tools/: qwen_mcp_bridge.mjs
ui-next/: .gitignore  package.json  pnpm-lock.yaml  vite.config.ts
ui-next/src/: app.css  app.html
ui-next/src-tauri/: Cargo.toml  tauri.conf.json
ui-next/src-tauri/capabilities/: default.json
ui-next/src-tauri/src/: lib.rs  main.rs
ui-next/src/lib/: api.ts  types.ts
ui-next/src/lib/components/: AgentMark.svelte  Artifacts.svelte  Composer.svelte  ContextBanner.svelte  Conversation.svelte  HandoffDialog.svelte  MessageCard.svelte  OptionsDialog.svelte  SessionHeader.svelte  Sidebar.svelte  Terminal.svelte  WorkLog.svelte  WorkerDialog.svelte  WorkspaceTabs.svelte
ui-next/src/routes/: +layout.svelte  +page.svelte
